--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,5 +23,28 @@ build:
 deploy:
   kustomize:
     paths:
-    - kustomize/staging
-    - kustomize/production
+      - kustomize/base
+
+profiles:
+  - name: staging
+    build:
+      artifacts:
+      - image: gcr.io/${PROJECT_ID}/backend
+      - image: gcr.io/${PROJECT_ID}/frontend
+      - image: gcr.io/${PROJECT_ID}/auth
+      - image: gcr.io/${PROJECT_ID}/blog
+    deploy:
+      kustomize:
+        paths:
+          - kustomize/staging
+  - name: production
+    build:
+      artifacts:
+      - image: gcr.io/${PROJECT_ID}/backend
+      - image: gcr.io/${PROJECT_ID}/frontend
+      - image: gcr.io/${PROJECT_ID}/auth
+      - image: gcr.io/${PROJECT_ID}/blog
+    deploy:
+      kustomize:
+        paths:
+          - kustomize/production
