--- a/kustomize/base/frontend-deployment.yaml
+++ b/kustomize/base/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: gcr.io/${PROJECT_ID}/frontend
+        image: frontend
         ports:
         - containerPort: 80
 ---
