--- a/kustomize/base/backend-deployment.yaml
+++ b/kustomize/base/backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: gcr.io/${PROJECT_ID}/backend
+        image: backend
         ports:
         - containerPort: 5000
         env:
