--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -5,3 +5,12 @@ resources:
   - blog-deployment.yaml
   - postgres-deployment.yaml
   - postgres-service.yaml
+images:
+  - name: backend
+    newName: backend
+  - name: frontend
+    newName: frontend
+  - name: auth
+    newName: auth
+  - name: blog
+    newName: blog
