--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -1,21 +1,33 @@
-server {
-    listen 80;
-    server_name localhost;
+worker_processes 1;
 
-    location / {
-        root /usr/share/nginx/html;
-        index login.html;
-    }
+events { worker_connections 1024; }
 
-    location /static {
-        alias /usr/share/nginx/html;
-    }
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    location /config.js {
-        root /usr/share/nginx/html;
-        default_type application/javascript;
-        add_header Cache-Control 'no-cache, no-store, must-revalidate';
-        add_header Pragma 'no-cache';
-        add_header Expires '0';
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen       80;
+        server_name  localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+
+        location /static {
+            alias /usr/share/nginx/html/static;
+        }
+
+        location /config.js {
+            root /usr/share/nginx/html;
+            default_type application/javascript;
+            add_header Cache-Control 'no-cache, no-store, must-revalidate';
+            add_header Pragma 'no-cache';
+            add_header Expires '0';
+        }
     }
 }
