--- a/kustomize/base/frontend-deployment.yaml
+++ b/kustomize/base/frontend-deployment.yaml
@@ -23,6 +23,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  annotations:
+    networking.gke.io/load-balancer-ip-addresses: web-ip
 spec:
   selector:
     app: frontend
@@ -30,3 +32,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
+      type: LoadBalancer
+  loadBalancerIP: 34.120.249.1
