--- a/kustomize/base/backend-deployment.yaml
+++ b/kustomize/base/backend-deployment.yaml
@@ -34,6 +34,11 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: POSTGRES_PASSWORD
+        - name: FRONTEND_DOMAIN
+          valueFrom:
+            configMapKeyRef:
+              name: domain-config
+              key: FRONTEND_DOMAIN
         - name: POSTGRES_HOST
           value: "postgres-service"
 ---
