--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -16,6 +16,7 @@ images:
     newName: blog
 configMapGenerator:
   - name: domain-config
+    # @TODO: need to edit dynamically
     literals:
-      - FRONTEND_DOMAIN=${FRONTEND_DOMAIN}
-      - BACKEND_DOMAIN=${BACKEND_DOMAIN}
+      - FRONTEND_DOMAIN=demo-backend.electronspark.xyz
+      - BACKEND_DOMAIN=demo-backend.electronspark.xyz
