move from nginx to flask

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.9-slim
 
 WORKDIR /root/app
 COPY requirements.txt /root/app/requirements.txt
+COPY app.py /root/app/app.py
 RUN pip install -r requirements.txt
 
 COPY html /root/app/html
