--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -22,6 +22,7 @@ build:
       dockerfile: Dockerfile
   - image: gateway
     context: gateway
+    context: src/gateway
     docker:
       dockerfile: Dockerfile
 deploy:
