--- a/kustomize/base/auth-deployment.yaml
+++ b/kustomize/base/auth-deployment.yaml
@@ -41,6 +41,18 @@ spec:
               key: FRONTEND_DOMAIN
         - name: POSTGRES_HOST
           value: "postgres-service"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 5001
+          initialDelaySeconds: 3
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 5001
+          initialDelaySeconds: 3
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
