--- a/kustomize/base/frontend-deployment.yaml
+++ b/kustomize/base/frontend-deployment.yaml
@@ -24,6 +24,18 @@ spec:
             configMapKeyRef:
               name: domain-config
               key: FRONTEND_DOMAIN
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 80
+          initialDelaySeconds: 3
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 80
+          initialDelaySeconds: 3
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
