--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - postgres-statefulset.yaml
   - postgres-service.yaml
   - gateway-deployment.yaml
+  - ingress.yaml
 images:
   - name: backend
     newName: backend
