--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - blog-deployment.yaml
   - postgres-statefulset.yaml
   - postgres-service.yaml
-  - gateway-deployment.yaml
+  # - gateway-deployment.yaml
   - ingress.yaml
 images:
   - name: backend
