--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -20,5 +20,5 @@ configMapGenerator:
   - name: domain-config
     # @TODO: need to edit dynamically
     literals:
-      - FRONTEND_DOMAIN=demo-backend.electronspark.xyz
+      - FRONTEND_DOMAIN=demo.electronspark.xyz
       - BACKEND_DOMAIN=demo-backend.electronspark.xyz
