--- a/kustomize/base/blog-deployment.yaml
+++ b/kustomize/base/blog-deployment.yaml
@@ -53,6 +53,13 @@ spec:
             port: 80
           initialDelaySeconds: 3
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: 250m
+            memory: 256Mi
+          limits:
+            cpu: 500m
+            memory: 512Mi
 ---
 apiVersion: v1
 kind: Service
