--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,9 +9,9 @@ steps:
     script: |
         #!/bin/bash
         set -x
-        skaffold build -f=skaffold.yaml --default-repo=gcr.io/$PROJECT_ID --file-output=/workspace/artifacts.json --cache-file=/workspace/$CACHE 
+        skaffold build -f=skaffold.yaml --default-repo=$_DEFAULT_REPO/$PROJECT_ID --file-output=/workspace/artifacts.json --cache-file=/workspace/$CACHE 
         # gcloud container clusters get-credentials --region=$_REGION $_CLUSTER;
-        # skaffold run -f=skaffold.yaml --default-repo=gcr.io/$PROJECT_ID;
+        # skaffold run -f=skaffold.yaml --default-repo=$_DEFAULT_REPO/$PROJECT_ID;
         
   - name: gcr.io/cloud-builders/gsutil # upload skaffold build cache
     id: upload-skaffold-cache
