--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
   #   timeout: 120s
 
   - id: 'build-staging-image'
-    name: 'gcr.io/k8s-skaffold/skaffold:v2.13.1'
+    name: 'gcr.io/cloud-builders/gsutil'
     script: |
         #!/bin/bash
         set -x
