--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,21 @@
 steps:
-  # - id: download-skaffold-cache
-  #   name: gcr.io/cloud-builders/gsutil # get skaffold build cache
-  #   args: ['cp', $_CACHE_URI, '/workspace/cache']
-  #   timeout: 120s
+  - id: download-skaffold-cache
+    name: gcr.io/cloud-builders/gsutil # get skaffold build cache
+    args: ['cp', $_CACHE_URI/cache, '/workspace/cache']
+    timeout: 120s
 
   - id: 'build-staging-image'
     name: 'gcr.io/k8s-skaffold/skaffold:v2.13.1'
     script: |
         #!/bin/bash
         set -x
-        skaffold build -f=skaffold.yaml --default-repo=us-central1-docker.pkg.dev/atlantean-wares-426921-j3/ci-cd-demo --file-output=/workspace/artifacts.json --cache-file=/workspace/cache 
-        # gcloud container clusters get-credentials --region=$_REGION $_CLUSTER;
-        # skaffold run -f=skaffold.yaml --default-repo=$_DEFAULT_REPO;
-        
+        # us-central1-docker.pkg.dev/atlantean-wares-426921-j3/ci-cd-demo
+        # skaffold build -f=skaffold.yaml --default-repo=$_DEFAULT_REPO --file-output=/workspace/artifacts.json --cache-file=/workspace/cache 
+        skaffold build -f=skaffold.yaml --default-repo=us-central1-docker.pkg.dev/atlantean-wares-426921-j3/ci-cd-demo --file-output=/workspace/artifacts.json --cache-file=/workspace/cache
+
   - name: gcr.io/cloud-builders/gsutil # upload skaffold build cache
     id: upload-skaffold-cache
-    args: ['cp', '/workspace/cache',  $_CACHE_URI]
+    args: ['cp', '/workspace/cache',  $_CACHE_URI/cache]
     timeout: 120s
 
   - name: gcr.io/cloud-builders/gcloud
