--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,17 +1,40 @@
+---
 apiVersion: deploy.cloud.google.com/v1
 kind: DeliveryPipeline
 metadata:
-  name: k8s-microservice-demo-pipeline
+  name: ci-cd-demo-cd
 description: Pipeline for deploying K8s microservice demo
 serialPipeline:
   stages:
   - targetId: staging
-    profiles: []
+    profiles:
+    - staging
     strategy:
       standard:
         verify: {}
   - targetId: production
-    profiles: []
+    profiles:
+    - production
     strategy:
       standard:
         verify: {}
+---
+apiVersion: deploy.cloud.google.com/v1
+kind: Target
+metadata:
+  name: staging
+description: Staging environment
+gke:
+  cluster: projects/$PROJECT_ID/locations/$CLUSTER_REGION/clusters/$STAGING_CLUSTER_NAME
+  location: $CLUSTER_REGION
+
+---
+
+apiVersion: deploy.cloud.google.com/v1
+kind: Target
+metadata:
+  name: production
+description: Production environment
+gke:
+  cluster: projects/$PROJECT_ID/locations/$CLUSTER_REGION/clusters/$PRODUCTION_CLUSTER_NAME
+  location: $CLUSTER_REGION
