--- a/kustomize/base/ingress.yaml
+++ b/kustomize/base/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frontend-ingress
+  name: ingress
   # @TODO: need to edit dynamically
   annotations:
     kubernetes.io/ingress.global-static-ip-name: web-ip
