--- a/kustomize/base/auth-deployment.yaml
+++ b/kustomize/base/auth-deployment.yaml
@@ -34,13 +34,16 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: POSTGRES_PASSWORD
+        - name: POSTGRES_HOST
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_HOST
         - name: DOMAIN
           valueFrom:
             configMapKeyRef:
               name: domain-config
               key: DOMAIN
-        - name: POSTGRES_HOST
-          value: "postgres-service"
         livenessProbe:
           httpGet:
             path: /health
