--- a/kustomize/staging/patches/prosrgress-secret.yaml
+++ b/kustomize/staging/patches/prosrgress-secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: postgres-secret
 type: Opaque
 data:
+  # @TODO: need to be generated dynamically
   POSTGRES_DB: cG9zdGdyZXNkYg==
   POSTGRES_USER: cG9zdGdyZXM=
   POSTGRES_PASSWORD: JVR0c2B6U3o5YDVbRU1wNQ==
