--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -1,6 +1,7 @@
 resources:
   - postgres-statefulset.yaml
   - postgres-service.yaml
+  - prosrgress-secret.yaml
   - frontend-deployment.yaml
   - auth-deployment.yaml
   - blog-deployment.yaml
