--- a/kustomize/base/auth-deployment.yaml
+++ b/kustomize/base/auth-deployment.yaml
@@ -13,6 +13,31 @@ spec:
       labels:
         app: auth
     spec:
+      initContainers:
+      - name: wait-for-db
+        image: postgres:13
+        env:
+        - name: POSTGRES_DB
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_DB
+        - name: POSTGRES_USER
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_USER
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_PASSWORD
+        command: ["/bin/sh", "-c"]
+        args:
+          - until pg_isready -h postgres-service -p 5432 -U $POSTGRES_USER 
+            do
+              echo "waiting for database to be ready.";
+            done
       containers:
       - name: auth
         image: auth
