--- a/kustomize/base/blog-deployment.yaml
+++ b/kustomize/base/blog-deployment.yaml
@@ -34,9 +34,9 @@ spec:
               key: POSTGRES_PASSWORD
         command: ["/bin/sh", "-c"]
         args:
-          - until pg_isready -h postgres-service -p 5432 -U $POSTGRES_USER 
+          - until pg_isready -h postgres-service -p 5432 -U $POSTGRES_USER;
             do
-              echo "waiting for database to be ready.";
+              echo "waiting for database to be ready."
             done
       containers:
       - name: blog
