wait for db to be ready

--- a/kustomize/base/blog-deployment.yaml
+++ b/kustomize/base/blog-deployment.yaml
@@ -36,7 +36,8 @@ spec:
         args:
           - until pg_isready -h postgres-service -p 5432 -U $POSTGRES_USER;
             do
-              echo "waiting for database to be ready."
+              echo "waiting for database to be ready.";
+              sleep 2;
             done
       containers:
       - name: blog
