--- a/kustomize/base/postgres-statefulset.yaml
+++ b/kustomize/base/postgres-statefulset.yaml
@@ -54,3 +54,4 @@ data:
   POSTGRES_DB: cG9zdGdyZXNkYg==
   POSTGRES_USER: cG9zdGdyZXM=
   POSTGRES_PASSWORD: cGFzc3dvcmQ=
+  POSTGRES_HOST: cG9zdGdyZXMtc2VydmljZQ==
