revert db manifests in service side

--- a/kustomize/base/blog-deployment.yaml
+++ b/kustomize/base/blog-deployment.yaml
@@ -32,14 +32,9 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: POSTGRES_PASSWORD
-        - name: POSTGRES_HOST
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: POSTGRES_HOST
         command: ["/bin/sh", "-c"]
         args:
-          - until pg_isready -h $POSTGRES_HOST -p 5432 -U $POSTGRES_USER;
+          - until pg_isready -h postgres-service -p 5432 -U $POSTGRES_USER;
             do
               echo "waiting for database to be ready.";
               sleep 2;
@@ -60,16 +55,18 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: POSTGRES_USER
-        - name: POSTGRES_HOST
+        - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               name: postgres-secret
-              key: POSTGRES_HOST
+              key: POSTGRES_PASSWORD
         - name: DOMAIN
           valueFrom:
             configMapKeyRef:
               name: domain-config
               key: DOMAIN
+        - name: POSTGRES_HOST
+          value: "postgres-service"
         livenessProbe:
           httpGet:
             path: /health
