--- a/src/blog/requirements.txt
+++ b/src/blog/requirements.txt
@@ -2,5 +2,5 @@ Flask==3.0.3
 Flask-CORS==4.0.1
 SQLAlchemy==2.0.32
 PyJWT==2.1.0
-Flask-SQLAlchemy
-psycopg2-binary
+Flask-SQLAlchemy==3.1.1
+psycopg2-binary==2.9.9
