--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,9 @@
 steps:
+  - name: gcr.io/k8s-skaffold/skaffold:v2.13.1
+    id: echo default repo url
+    script: |
+        #!/bin/bash
+        echo $_DEFAULT_REPO
   - name: 'python:3.12-slim'
     id: Test
     entrypoint: /bin/sh
