--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     id: echo default repo url
     script: |
         #!/bin/bash
-        echo $_DEFAULT_REPO
+        echo "ARTIFACT REGISTRY URL: $_ARTIFACT_REGISTRY_URL"
   - name: 'python:3.12-slim'
     id: Test
     entrypoint: /bin/sh
@@ -21,7 +21,7 @@ steps:
     script: |
         #!/bin/bash
         set -x
-        skaffold build -f=skaffold.yaml --default-repo=$_DEFAULT_REPO --file-output=/workspace/artifacts.json --cache-file=/workspace/cache 
+        skaffold build -f=skaffold.yaml --default-repo=$_ARTIFACT_REGISTRY_URL --file-output=/workspace/artifacts.json --cache-file=/workspace/cache 
         # skaffold build -f=skaffold.yaml --default-repo=us-central1-docker.pkg.dev/atlantean-wares-426921-j3/ci-cd-demo --file-output=/workspace/artifacts.json --cache-file=/workspace/cache
 
   - name: gcr.io/cloud-builders/gsutil # upload skaffold build cache
