--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,10 @@
 steps:
   - name: gcr.io/k8s-skaffold/skaffold:v2.13.1
     id: echo default repo url
-    entrypoint: /bin/sh
+    entrypoint: echo
     args:
-    - -c
-    - echo
     - "ARTIFACT REGISTRY URL: $_REGION-docker.pkg.dev/$_PROJECT_ID/$_DEFAULT_REPO"
+
 
   - name: 'python:3.12-slim'
     id: Test
